@@ -13,7 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package org.exbin.framework.action.popup.handler;
+package org.exbin.framework.menu.popup.handler;
 
 import java.awt.Image;
 import java.awt.Point;
@@ -24,9 +24,10 @@ import java.awt.datatransfer.StringSelection;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Dictionary;
-import java.util.Hashtable;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import javax.annotation.Nullable;
@@ -44,15 +45,15 @@ import javax.swing.text.Position;
 import javax.swing.text.StyleConstants;
 import javax.swing.text.html.HTML;
 import javax.swing.text.html.HTMLDocument;
-import org.exbin.framework.action.popup.ImageActionsHandler;
-import org.exbin.framework.action.popup.LinkActionsHandler;
-import org.exbin.framework.action.popup.PositionImageActionsHandler;
-import org.exbin.framework.action.popup.PositionLinkActionsHandler;
+import org.exbin.framework.menu.popup.ImageActionsHandler;
+import org.exbin.framework.menu.popup.LinkActionsHandler;
+import org.exbin.framework.menu.popup.PositionImageActionsHandler;
+import org.exbin.framework.menu.popup.PositionLinkActionsHandler;
 import org.exbin.framework.utils.ActionUtils;
 import org.exbin.framework.utils.DesktopUtils;
-import org.exbin.framework.utils.ClipboardActionsHandler;
-import org.exbin.framework.utils.ClipboardActionsUpdateListener;
 import org.exbin.framework.utils.ClipboardUtils;
+import org.exbin.framework.action.api.clipboard.ClipboardStateListener;
+import org.exbin.framework.action.api.clipboard.TextClipboardController;
 
 /**
  * Popup handler for JEditorPane.
@@ -60,10 +61,10 @@ import org.exbin.framework.utils.ClipboardUtils;
  * @author ExBin Project (https://exbin.org)
  */
 @ParametersAreNonnullByDefault
-public class EditorPanePopupHandler implements ClipboardActionsHandler, LinkActionsHandler, PositionLinkActionsHandler, ImageActionsHandler, PositionImageActionsHandler {
+public class EditorPanePopupHandler implements TextClipboardController, LinkActionsHandler, PositionLinkActionsHandler, ImageActionsHandler, PositionImageActionsHandler {
 
-    private static String MAP_PROPERTY = "__MAP__";
-    private static String IMAGE_CACHE_PROPERTY = "imageCache";
+    private static final String MAP_PROPERTY = "__MAP__";
+    private static final String IMAGE_CACHE_PROPERTY = "imageCache";
 
     private final JEditorPane editorPane;
 
@@ -98,8 +99,13 @@ public class EditorPanePopupHandler implements ClipboardActionsHandler, LinkActi
     }
 
     @Override
-    public boolean isSelection() {
+    public boolean hasSelection() {
         return editorPane.isEnabled() && editorPane.getSelectionStart() != editorPane.getSelectionEnd();
+    }
+
+    @Override
+    public boolean hasDataToCopy() {
+        return hasSelection();
     }
 
     @Override
@@ -113,7 +119,7 @@ public class EditorPanePopupHandler implements ClipboardActionsHandler, LinkActi
     }
 
     @Override
-    public void setUpdateListener(ClipboardActionsUpdateListener updateListener) {
+    public void setUpdateListener(ClipboardStateListener updateListener) {
         // Ignore
     }
 
@@ -204,6 +210,7 @@ public class EditorPanePopupHandler implements ClipboardActionsHandler, LinkActi
         // Note: From HTMLEditorKit.LinkController.mouseMoved
         Document document = editorPane.getDocument();
         if (document instanceof HTMLDocument) {
+            @SuppressWarnings("deprecation")
             int pos = editorPane.viewToModel(position);
             if (pos >= 0) {
                 return getLinkUrl(editorPane, pos, position.x, position.y);
@@ -229,15 +236,17 @@ public class EditorPanePopupHandler implements ClipboardActionsHandler, LinkActi
                     Object map = null;
                     Object maps = htmlDocument.getProperty(MAP_PROPERTY);
 
-                    if (maps != null && (maps instanceof Hashtable)) {
-                        map = ((Hashtable) maps).get((String) useMap);
+                    if (maps != null && (maps instanceof java.util.Hashtable)) {
+                        map = ((java.util.Hashtable) maps).get((String) useMap);
                     }
 
                     if (map != null && caretPosition < htmlDocument.getLength()) {
                         Rectangle bounds;
                         TextUI ui = editorPane.getUI();
                         try {
+                            @SuppressWarnings("deprecation")
                             Shape lBounds = ui.modelToView(editorPane, caretPosition, Position.Bias.Forward);
+                            @SuppressWarnings("deprecation")
                             Shape rBounds = ui.modelToView(editorPane, caretPosition + 1, Position.Bias.Backward);
                             bounds = lBounds.getBounds();
                             bounds.add((rBounds instanceof Rectangle) ? (Rectangle) rBounds : rBounds.getBounds());
@@ -280,6 +289,7 @@ public class EditorPanePopupHandler implements ClipboardActionsHandler, LinkActi
     public static String hasImageSrc(JEditorPane editorPane, Point position) {
         Document document = editorPane.getDocument();
         if (document instanceof HTMLDocument) {
+            @SuppressWarnings("deprecation")
             int pos = editorPane.viewToModel(position);
             if (pos >= 0) {
                 return EditorPanePopupHandler.hasImageSrc(editorPane, pos, position.x, position.y);
@@ -312,8 +322,9 @@ public class EditorPanePopupHandler implements ClipboardActionsHandler, LinkActi
         try {
             // From ImageView.loadImage
             URL reference = document.getBase();
-            URL imageUrl = new URL(reference, imageSrc);
+            URL imageUrl = reference.toURI().resolve(imageSrc).toURL();
             Image image;
+            @SuppressWarnings("unchecked")
             Dictionary<URL, Image> cache = (Dictionary<URL, Image>) document.getProperty(IMAGE_CACHE_PROPERTY);
             if (cache != null) {
                 image = cache.get(imageUrl);
@@ -329,8 +340,8 @@ public class EditorPanePopupHandler implements ClipboardActionsHandler, LinkActi
             if (image != null) {
                 ClipboardUtils.pasteImage(image);
             }
-        } catch (MalformedURLException ex) {
-
+        } catch (MalformedURLException | URISyntaxException ex) {
+            // ignore
         }
     }
 }
